add css variables

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-mzc-counter",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Simple Vue2 counter component",
   "author": "Max Zhurkin",
   "license": "MIT",
@@ -26,8 +26,7 @@
 
   "files": [
     "dist/*",
-    "src/**/*.vue",
-    "src/**/*.css"
+    "src/**/*.vue"
   ],
   "sideEffects": false,
 
